--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-simple-maps": "^2.0.0",
     "react-spring": "^8.0.27",
     "react-tooltip": "^4.1.2",
+    "serialize-javascript": "^3.1.0",
     "tailwindcss": "^1.6.0",
     "topojson-server": "^3.0.1"
   },
